[configured in one click] fix cut off text

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -759,6 +759,7 @@ h1.title::first-letter {
     }
     .section {
         padding: 0;
+        margin-top: 90px;
     }
 }
 
